--- a/static/laptop.html
+++ b/static/laptop.html
@@ -1,232 +1,239 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Sensor Visualizer</title>
-    <div id="hud">
-  <h3>📱 Phone Sensor Data</h3>
-  <table>
-    <tbody>
-      <tr><th colspan="2">Orientation (deg)</th></tr>
-      <tr><td>Alpha (Z)</td><td id="o-alpha">0</td></tr>
-      <tr><td>Beta (X)</td><td id="o-beta">0</td></tr>
-      <tr><td>Gamma (Y)</td><td id="o-gamma">0</td></tr>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>3D Phone Sensor Visualizer</title>
 
-      <tr><th colspan="2">Acceleration (m/s²)</th></tr>
-      <tr><td>X</td><td id="a-x">0</td></tr>
-      <tr><td>Y</td><td id="a-y">0</td></tr>
-      <tr><td>Z</td><td id="a-z">0</td></tr>
+  <div id="hud">
+    <h3>📱 Phone Sensor Data</h3>
+    <table>
+      <tbody>
+        <tr><th colspan="2">Orientation (deg)</th></tr>
+        <tr><td>Alpha (Z)</td><td id="o-alpha">0</td></tr>
+        <tr><td>Beta (X)</td><td id="o-beta">0</td></tr>
+        <tr><td>Gamma (Y)</td><td id="o-gamma">0</td></tr>
 
-      <tr><th colspan="2">Accel + Gravity</th></tr>
-      <tr><td>X</td><td id="ag-x">0</td></tr>
-      <tr><td>Y</td><td id="ag-y">0</td></tr>
-      <tr><td>Z</td><td id="ag-z">0</td></tr>
+        <tr><th colspan="2">Acceleration (m/s²)</th></tr>
+        <tr><td>X</td><td id="a-x">0</td></tr>
+        <tr><td>Y</td><td id="a-y">0</td></tr>
+        <tr><td>Z</td><td id="a-z">0</td></tr>
 
-      <tr><th colspan="2">Rotation Rate (°/s)</th></tr>
-      <tr><td>Alpha</td><td id="r-alpha">0</td></tr>
-      <tr><td>Beta</td><td id="r-beta">0</td></tr>
-      <tr><td>Gamma</td><td id="r-gamma">0</td></tr>
+        <tr><th colspan="2">Accel + Gravity</th></tr>
+        <tr><td>X</td><td id="ag-x">0</td></tr>
+        <tr><td>Y</td><td id="ag-y">0</td></tr>
+        <tr><td>Z</td><td id="ag-z">0</td></tr>
 
-      <tr><th colspan="2">Meta</th></tr>
-      <tr><td>Interval</td><td id="interval">0</td></tr>
-      <tr><td>Datapoints</td><td id="datapoints">0</td></tr>
-    </tbody>
-  </table>
-</div>
+        <tr><th colspan="2">Rotation Rate (°/s)</th></tr>
+        <tr><td>Alpha</td><td id="r-alpha">0</td></tr>
+        <tr><td>Beta</td><td id="r-beta">0</td></tr>
+        <tr><td>Gamma</td><td id="r-gamma">0</td></tr>
 
-    <style>
-        /* Remove all default margin and hide scrollbars */
-        body {
-            margin: 0;
-            overflow: hidden;
-            background: #111827;
-            /* Dark background */
-        }
+        <tr><th colspan="2">Meta</th></tr>
+        <tr><td>Interval</td><td id="interval">0</td></tr>
+        <tr><td>Datapoints</td><td id="datapoints">0</td></tr>
+      </tbody>
+    </table>
+  </div>
 
-        /* The canvas will be injected by three.js and should fill the screen */
-        canvas {
-            display: block;
-        }
-        #hud {
-  position: fixed;
-  top: 16px;
-  left: 16px;
-  background: rgba(17, 24, 39, 0.85);
-  backdrop-filter: blur(6px);
-  color: #e5e7eb;
-  padding: 14px;
-  border-radius: 14px;
-  font-family: monospace;
-  font-size: 12px;
-  max-width: 260px;
-  z-index: 10;
-  box-shadow: 0 10px 25px rgba(0,0,0,0.4);
-}
+  <style>
+    body {
+      margin: 0;
+      overflow: hidden;
+      background: #111827;
+    }
 
-#hud h3 {
-  margin: 0 0 8px 0;
-  font-size: 13px;
-  color: #38bdf8;
-  text-align: center;
-}
+    canvas {
+      display: block;
+    }
 
-#hud table {
-  width: 100%;
-  border-collapse: collapse;
-}
+    #hud {
+      position: fixed;
+      top: 16px;
+      left: 16px;
+      background: rgba(17, 24, 39, 0.85);
+      backdrop-filter: blur(6px);
+      color: #e5e7eb;
+      padding: 14px;
+      border-radius: 14px;
+      font-family: monospace;
+      font-size: 12px;
+      max-width: 260px;
+      z-index: 10;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.4);
+    }
 
-#hud th {
-  text-align: left;
-  padding-top: 8px;
-  color: #93c5fd;
-}
+    #hud h3 {
+      margin: 0 0 8px 0;
+      font-size: 13px;
+      color: #38bdf8;
+      text-align: center;
+    }
 
-#hud td {
-  padding: 2px 0;
-}
+    #hud table {
+      width: 100%;
+      border-collapse: collapse;
+    }
 
-#hud td:last-child {
-  text-align: right;
-  font-weight: 600;
-}
+    #hud th {
+      text-align: left;
+      padding-top: 8px;
+      color: #93c5fd;
+    }
 
-    </style>
+    #hud td {
+      padding: 2px 0;
+    }
+
+    #hud td:last-child {
+      text-align: right;
+      font-weight: 600;
+    }
+  </style>
 </head>
 
 <body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 
-    <!-- Three.js library from a CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+  <script>
+    let scene, camera, renderer, phone;
+    let latestData = {
+      orientation: { alpha: 0, beta: 0, gamma: 0 }
+    };
 
-    <script>
-        // --- GLOBAL VARIABLES ---
-        let scene, camera, renderer, box;
-        let latestData = {
-            orientation: { alpha: 0, beta: 0, gamma: 0 }
-        };
-function updateHUD(data) {
-  const o = data.orientation || {};
-  const a = data.acceleration || {};
-  const ag = data.accelerationIncludingGravity || {};
-  const r = data.rotationRate || {};
+    function updateHUD(data) {
+      const o = data.orientation || {};
+      const a = data.acceleration || {};
+      const ag = data.accelerationIncludingGravity || {};
+      const r = data.rotationRate || {};
 
-  const set = (id, v) =>
-    document.getElementById(id).textContent =
-      Number.isFinite(v) ? v.toFixed(2) : "0";
+      const set = (id, v) =>
+        document.getElementById(id).textContent =
+          Number.isFinite(v) ? v.toFixed(2) : "0";
 
-  set("o-alpha", o.alpha);
-  set("o-beta", o.beta);
-  set("o-gamma", o.gamma);
+      set("o-alpha", o.alpha);
+      set("o-beta", o.beta);
+      set("o-gamma", o.gamma);
 
-  set("a-x", a.x);
-  set("a-y", a.y);
-  set("a-z", a.z);
+      set("a-x", a.x);
+      set("a-y", a.y);
+      set("a-z", a.z);
 
-  set("ag-x", ag.x);
-  set("ag-y", ag.y);
-  set("ag-z", ag.z);
+      set("ag-x", ag.x);
+      set("ag-y", ag.y);
+      set("ag-z", ag.z);
 
-  set("r-alpha", r.alpha);
-  set("r-beta", r.beta);
-  set("r-gamma", r.gamma);
+      set("r-alpha", r.alpha);
+      set("r-beta", r.beta);
+      set("r-gamma", r.gamma);
 
-  document.getElementById("interval").textContent = data.interval || 0;
-  document.getElementById("datapoints").textContent = data.datapoints || 0;
-}
+      document.getElementById("interval").textContent = data.interval || 0;
+      document.getElementById("datapoints").textContent = data.datapoints || 0;
+    }
 
-        // --- INITIALIZATION ---
-        function init() {
-            // 1. Scene setup
-            scene = new THREE.Scene();
-            scene.background = new THREE.Color(0x111827); // Match body background
+    function init() {
+      scene = new THREE.Scene();
+      scene.background = new THREE.Color(0x111827);
 
-            // 2. Camera setup
-            const fov = 75;
-            const aspect = window.innerWidth / window.innerHeight;
-            const near = 0.1;
-            const far = 1000;
-            camera = new THREE.PerspectiveCamera(fov, aspect, near, far);
-            camera.position.z = 5; // Move camera back so we can see the box
+      camera = new THREE.PerspectiveCamera(
+        75,
+        window.innerWidth / window.innerHeight,
+        0.1,
+        1000
+      );
+      camera.position.z = 6;
 
-            // 3. Renderer setup
-            renderer = new THREE.WebGLRenderer({ antialias: true });
-            renderer.setSize(window.innerWidth, window.innerHeight);
-            document.body.appendChild(renderer.domElement);
+      renderer = new THREE.WebGLRenderer({ antialias: true });
+      renderer.setSize(window.innerWidth, window.innerHeight);
+      document.body.appendChild(renderer.domElement);
 
-            // 4. Lighting
-            const ambientLight = new THREE.AmbientLight(0x404040, 2); // Soft white light
-            scene.add(ambientLight);
-            const directionalLight = new THREE.DirectionalLight(0xffffff, 1.5);
-            directionalLight.position.set(5, 5, 5);
-            scene.add(directionalLight);
+      scene.add(new THREE.AmbientLight(0xffffff, 1.2));
 
-            // 5. Create the 3D Box
-            const geometry = new THREE.BoxGeometry(2, 2, 2);
-            const material = new THREE.MeshStandardMaterial({
-                color: 0x38bdf8, // A nice blue color
-                metalness: 0.5,
-                roughness: 0.3
-            });
-            box = new THREE.Mesh(geometry, material);
-            scene.add(box);
+      const light = new THREE.DirectionalLight(0xffffff, 1.5);
+      light.position.set(5, 5, 5);
+      scene.add(light);
 
-            // 6. Handle window resizing
-            window.addEventListener('resize', onWindowResize, false);
+      // 📱 PHONE MODEL
+      phone = new THREE.Group();
 
-            // 7. Start fetching data and animating
-            fetchSensorData(); // Fetch the first time immediately
-            setInterval(fetchSensorData, 500); // Then poll every 50ms
-            animate();
+      // Body
+      const body = new THREE.Mesh(
+        new THREE.BoxGeometry(1.6, 3.2, 0.18),
+        new THREE.MeshStandardMaterial({
+          color: 0x1f2937,
+          metalness: 0.6,
+          roughness: 0.35
+        })
+      );
+      phone.add(body);
+
+      // Screen
+      const screen = new THREE.Mesh(
+        new THREE.PlaneGeometry(1.45, 3.0),
+        new THREE.MeshStandardMaterial({
+          color: 0x020617,
+          emissive: 0x38bdf8,
+          emissiveIntensity: 0.18
+        })
+      );
+      screen.position.z = 0.091;
+      phone.add(screen);
+
+      // Camera bump
+      const cam = new THREE.Mesh(
+        new THREE.BoxGeometry(0.35, 0.35, 0.08),
+        new THREE.MeshStandardMaterial({
+          color: 0x000000,
+          roughness: 0.6
+        })
+      );
+      cam.position.set(-0.5, 1.2, -0.05);
+      phone.add(cam);
+
+      scene.add(phone);
+
+      window.addEventListener("resize", onWindowResize);
+
+      fetchSensorData();
+      setInterval(fetchSensorData, 50);
+      animate();
+    }
+
+    async function fetchSensorData() {
+      try {
+        const res = await fetch("/sensor");
+        const data = await res.json();
+        if (data && data.orientation) {
+          latestData = data;
+          updateHUD(data);
         }
+      } catch (e) {
+        console.error("Sensor fetch failed", e);
+      }
+    }
 
-        // --- DATA FETCHING ---
-        async function fetchSensorData() {
-            try {
-                const response = await fetch('/sensor');
-                const data = await response.json();
-                // Update the global data object with the nested orientation values
-                if (data && data.orientation) {
-                latestData = data;
-                updateHUD(data);
-                }
+    function animate() {
+      requestAnimationFrame(animate);
 
-            } catch (e) {
-                console.error("Could not fetch sensor data:", e);
-            }
-        }
+      if (phone && latestData.orientation) {
+        const alpha = THREE.MathUtils.degToRad(latestData.orientation.alpha);
+        const beta = THREE.MathUtils.degToRad(latestData.orientation.beta);
+        const gamma = THREE.MathUtils.degToRad(latestData.orientation.gamma);
 
-        // --- ANIMATION LOOP ---
-        function animate() {
-            requestAnimationFrame(animate);
+        const euler = new THREE.Euler(beta, alpha, -gamma, "YXZ");
+        phone.setRotationFromEuler(euler);
+      }
 
-            if (box && latestData.orientation) {
-                // Convert degrees from the sensor to radians for three.js
-                const alphaRad = THREE.MathUtils.degToRad(latestData.orientation.alpha);
-                const betaRad = THREE.MathUtils.degToRad(latestData.orientation.beta);
-                const gammaRad = THREE.MathUtils.degToRad(latestData.orientation.gamma);
+      renderer.render(scene, camera);
+    }
 
-                // Apply rotations
-                // Note: The order of rotations can matter. 'YXZ' is often a good starting point for device orientation.
-                const euler = new THREE.Euler(betaRad, alphaRad, -gammaRad, 'YXZ');
-                box.setRotationFromEuler(euler);
-            }
+    function onWindowResize() {
+      camera.aspect = window.innerWidth / window.innerHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(window.innerWidth, window.innerHeight);
+    }
 
-            renderer.render(scene, camera);
-        }
-
-        // --- EVENT HANDLERS ---
-        function onWindowResize() {
-            camera.aspect = window.innerWidth / window.innerHeight;
-            camera.updateProjectionMatrix();
-            renderer.setSize(window.innerWidth, window.innerHeight);
-        }
-
-        // --- START THE APP ---
-        init();
-
-    </script>
+    init();
+  </script>
 </body>
-
 </html>
